[package]
name = "pg-amqp-bridge"
version = "0.0.6"
authors = ["steve-chavez <stevechavezast@gmail.com>"]

[[test]]
name = "main"
harness = false

[dependencies]
amqp = "0.1.0"
env_logger = "0.4.2"
fallible-iterator = "0.1.3"
log = "0.3.7"
postgres = { git = "https://github.com/seanlth/rust-postgres" }
r2d2 = "0.8.2"
r2d2_postgres = { git = "https://github.com/seanlth/r2d2-postgres" }

[dev-dependencies]
rustc-test = "0.2.0"
futures = "0.1.12"
lapin-futures = "0.9.0"
tokio-core = "0.1.6"
